# rustimport_jupyter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml  wheel.yml
examples/: numpy.ipynb  polars_expression_plugins.ipynb  rust_import_colab.ipynb
examples_org/: numpy.ipynb  polars_expression_plugins.ipynb  rust_import_colab.ipynb
maint_tools/: create_release.sh
src/rustimport_jupyter/: __init__.py  _ipython_magic.py
tests/: __init__.py  test_ipython_magic.py  test_load_extension.py
